--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Home#index</h1>
+<% if user_signed_in? %>
+  <h1>Welcome, <%= current_user.email %></h1>
+  <%= link_to 'Log out', session_path(current_user), data: { turbo_method: :delete } %><br>
+<% else %>
+  <h1>This is the index page</h1>
+  <%= link_to 'Login', new_session_path %><br>
+<% end %>
+<%= link_to 'Secret page', '/home/secret' %>
