--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,15 +11,15 @@
   <% end %>
   <div>
     <%= f.label :email %><br>
-    <%= f.email_field :email %>
+    <%= f.email_field :email, required: true %>
   </div>
   <div>
     <%= f.label :password %><br>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, required: true %>
   </div>
   <div>
     <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, required: true %>
   </div>
   <p>
     <%= f.submit %>
