Add new files and styles for buttons component

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,6 @@
+/* NEW FILES NEED TO BE PLACED AT THE TOP */
+@import "./components/buttons";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
