Add styles for headings component

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,5 +1,7 @@
 /* NEW FILES NEED TO BE PLACED AT THE TOP */
 @import "./components/buttons";
+@import "./components/headings";
+
 
 @tailwind base;
 @tailwind components;
