--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body class="bg-gray-100 dark:bg-gray-900">
+  <body class="bg-gray-100 dark:bg-gray-900 dark:text-white">
     <%= render "shared/sidebar" %>
-    <div class="prose lg:prose-lg mt-2 mx-auto dark:prose-invert" >
+    <div class="p-8 sm:ml-64">
       <% flash.each do |type, msg| %>
         <div>
           <%= msg %>
