--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidenav">
   <div class="overflow-y-auto py-5 px-3 h-full bg-white border-r border-gray-200 dark:bg-gray-800 dark:border-gray-700">
     <a href="https://flowbite.com/" class="flex items-center ps-2.5 mb-5">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 me-3 sm:h-7" alt="Flowbite Logo" />
+      <%= image_tag 'ruby.png', alt: 'Logo Ruby', class: 'h-6 me-3 sm:h-7' %>
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">SchoolOnRails</span>
     </a>
     <ul class="space-y-2">
