Add stimulus-notification pkg

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,7 @@
   <body class="bg-gray-200 dark:bg-gray-900 dark:text-white">
     <%= render "shared/sidebar" %>
     <div class="p-8 sm:ml-64">
-      <% flash.each do |type, msg| %>
-        <div>
-          <%= msg %>
-        </div>
-      <% end %>
-   
+      <%= render "shared/flash_msg" if flash.present? %>
       <%= yield %>
     </div>
   </body>
