--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -20,4 +20,10 @@
   .btn-red {
     @apply bg-red-600 text-white hover:bg-red-700 hover:cursor-pointer;
   }
+  .btn-green {
+    @apply bg-green-600 text-white hover:bg-green-700 hover:cursor-pointer;
+  }
+  .btn-yellow {
+    @apply bg-yellow-600 text-white hover:bg-yellow-700 hover:cursor-pointer;
+  }
 }
