--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<%#= render "form", user: @user, title: "Create a new account" %>
+
 <section class="dark:bg-gray-900">
   <div class="flex flex-col items-center justify-center px-6 mx-auto md:h-1/3 lg:py-0">
     <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
@@ -7,7 +9,7 @@
     <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-         Create a new account
+         Create a new account 
         </h1>
         <%= form_with model: @user, class: 'space-y-4 md:space-y-6' do |f| %>
           <div>
