--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,17 @@
 <section class="dark:bg-gray-900">
   <div class="flex flex-col items-center justify-center px-6 mx-auto md:h-1/3 lg:py-0">
+    <!-- 
     <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
       <%= image_tag 'ruby.png', alt: 'Logo Ruby', class: 'w-8 h-8 mr-2' %>
       School on Rails    
-    </a>
+    </a> 
+    -->
     <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 md:max-w-2xl xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="p-12 space-y-4 md:space-y-6 sm:p-12">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
          <%= title %>
         </h1>
-        <%= form_with model: user, class: 'space-y-4 md:space-y-6' do |f| %>
+        <%= form_with(model: user, class: 'space-y-4 md:space-y-6') do |f| %>
           <% if action_name == 'edit' %>
             <div>
               <%= f.label :email, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
@@ -42,9 +44,67 @@
             <%= f.label :birthdate, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
             <%= f.date_field :birthdate, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
           </div>
-            <%= f.submit 'Submit', class: 'btn btn-full btn-blue' %>
+          <div>
+            <%= f.label :phone, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
+            <%= f.text_field :phone, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+          </div>
+           <%= f.fields_for :address do |address_form| %>
+            <div>
+              <%= address_form.label :street, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
+              <%= address_form.text_field :street, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+            </div>
+            <div>
+              <%= address_form.label :city, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
+              <%= address_form.text_field :city, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+            </div>
+            <div>
+              <%= address_form.label :state, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
+              <%= address_form.text_field :state, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+            </div>
+            <div>
+              <%= address_form.label :country, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
+              <%= address_form.text_field :country, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+            </div>
+            <div>
+              <%= address_form.label :zip_code, class: 'block text-sm mb-2 font-medium text-gray-900 dark:text-white' %>
+              <%= address_form.text_field :zip_code, required: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+            </div>
+          <% end %>
+
+          <%= f.submit 'Submit', class: 'btn btn-full btn-blue' %>
         <% end %>
       </div>
     </div>
   </div>
 </section>
+
+
+<!-- STEPPER ROW
+
+<ol class="flex center items-center w-1/2 mx-auto px-6 pl-52 mb-4 sm:mb-5">
+    <li class="flex w-full items-center text-blue-600 dark:text-blue-500 after:content-[''] after:w-full after:h-1 after:border-b after:border-blue-100 after:border-4 after:inline-block dark:after:border-blue-800">
+        <div class="flex items-center justify-center w-10 h-10 bg-blue-100 rounded-full lg:h-12 lg:w-12 dark:bg-blue-800 shrink-0">
+            <svg class="w-4 h-4 text-blue-600 lg:w-6 lg:h-6 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
+                <path d="M18 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM6.5 3a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.014 13.021l.157-.625A3.427 3.427 0 0 1 6.5 9.571a3.426 3.426 0 0 1 3.322 2.805l.159.622-6.967.023ZM16 12h-3a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0 2Z"/>
+            </svg>
+        </div>
+    </li>
+    <li class="flex w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-100 after:border-4 after:inline-block dark:after:border-gray-700">
+        <div class="flex items-center justify-center w-10 h-10 bg-gray-100 rounded-full lg:h-12 lg:w-12 dark:bg-gray-700 shrink-0">
+            <svg class="w-4 h-4 text-blue-600 lg:w-6 lg:h-6 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 14">
+                <path d="M18 0H2a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM2 12V6h16v6H2Z"/>
+                <path d="M6 8H4a1 1 0 0 0 0 2h2a1 1 0 0 0 0-2Zm8 0H9a1 1 0 0 0 0 2h5a1 1 0 1 0 0-2Z"/>
+            </svg>
+        </div>
+    </li>
+    <li class="flex items-center w-full">
+        <div class="flex items-center justify-center w-10 h-10 bg-gray-100 rounded-full lg:h-12 lg:w-12 dark:bg-gray-700 shrink-0">
+            <svg class="w-4 h-4 text-blue-600 lg:w-6 lg:h-6 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
+                <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2ZM7 2h4v3H7V2Zm5.7 8.289-3.975 3.857a1 1 0 0 1-1.393 0L5.3 12.182a1.002 1.002 0 1 1 1.4-1.436l1.328 1.289 3.28-3.181a1 1 0 1 1 1.392 1.435Z"/>
+            </svg>
+        </div>
+    </li>
+</ol>
+
+
+-->
